# ReflectSim

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: build_objaverse_index.py  llm_self_tune.py
src/three_d_agent/: __init__.py  cli.py
src/three_d_agent/agent/: __init__.py  graph.py  json_utils.py  llm.py  nodes.py  prompts.py  state.py
src/three_d_agent/sim/: __init__.py  config.py  recorder.py  robot.py  scene_builder.py
src/three_d_agent/tools/: __init__.py  decompose_scene.py  dummy_assets.py  fetch_assets.py  generate_asset.py  retrieve_asset.py  solve_pose.py  validate_robot.py
