[project]
name = "three-d-agent"
version = "0.1.0"
description = "LangGraph 3D scene generation agent for robot training"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.6",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2.7",
    "trimesh>=4.4",
    "numpy>=1.26",
    "Pillow>=10",
    "objaverse>=0.1.7",
    "sentence-transformers>=3",
    "faiss-cpu>=1.8",
    "imageio[ffmpeg]>=2.34",
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
sim = ["genesis-world>=0.2"]
gen = []  # hy3dgen installed from source; see README
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
three-d-agent = "three_d_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/three_d_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring GPU and external services",
    "integration: integration tests using real LLM but mocked heavy models",
]
